# FlapPyBird-1.0.4-

./: Makefile  README.md  bash.exe.stackdump  flappybird-master.apk  index.html  main.py  pyproject.toml  软件项目管理大作业范例--火灾救助系统.docx
src/: flappy.py
src/entities/: __init__.py  background.py  entity.py  floor.py  game_over.py  pipe.py  player.py  powerup.py  score.py  welcome_message.py
src/utils/: constants.py  game_config.py  images.py  sounds.py  utils.py  window.py
